feat: tmux.git.config

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -7,34 +7,16 @@ bind ';' split-window -v
 bind C-l clear-history
 set -g default-terminal "screen-256color"
 
-#get colors in https://michurin.github.io/xterm256-color-picker/
-set-option -g status-style fg=colour136,bg=colour234
-
-set-option -g status on
-set-option -g status-interval 1
-set-window-option -g window-status-current-format ""
-
 #left options
 set-option -g status-left-length 150
 set-option -g status-left-style default
-GIT_BRANCH='#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
-GIT_FILES_UNPUSHED='#(cd #{pane_current_path}; git cherry -v | wc -l || echo 0) '
-GIT_FILES_UNPULLED='#(cd #{pane_current_path}; git log --oneline --left-right --decorate origin/'$GIT_BRANCH'... | grep -i "^<"  | wc -l || echo 0) '
 
+#change congif file custom if .git exists
+if-shell "ls .git" "source ~/.tmux.git.conf"
+# bind r source-file ~/.tmux.git.conf;
 #if GIT_BRANCH is not empty
-#GIT
-set -ag status-left '#[default] GIT '$GIT_BRANCH'#[fg=colour136,bg=colour235,bright]'
-# #files added
-set -ag status-left '#[fg=green,bg=default,bright] A:#(cd #{pane_current_path}; git status -s | grep -E "(\?|A).*$" | wc -l) #[default]'
-#files modified
-set -ag status-left '#[fg=yellow,bg=default,bright] M:#(cd #{pane_current_path}; git status -s | grep -E "M.*$" | wc -l) #[default]'
-#files deleted
-set -ag status-left '#[fg=red,bg=default,bright] D:#(cd #{pane_current_path}; git status -s | grep -E "D.*$" | wc -l) #[default]'
-#files unpulled
-set -ag status-left '#[fg=colour136,bg=default,bright] ↓:'$GIT_FILES_UNPULLED' #[default]'
-#files unpushed
-set -ag status-left '#[fg=colour136,bg=default,bright] ↑:'$GIT_FILES_UNPUSHED' #[default]'
-#right options
 set-option -g status-right-length 150
 set-option -g status-right-style default
 set-option -g status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
+
+
