fix: tmux: diff start between vs-code and gnome-terminal

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -8,15 +8,22 @@ bind C-l clear-history
 set -g default-terminal "screen-256color"
 
 #left options
+set-option -g status on
 set-option -g status-left-length 150
 set-option -g status-left-style default
 
 #change congif file custom if .git exists
-if-shell "ls .git" "source ~/.tmux.git.conf"
-# bind r source-file ~/.tmux.git.conf;
-#if GIT_BRANCH is not empty
-set-option -g status-right-length 150
-set-option -g status-right-style default
-set-option -g status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
+if-shell "ls .git" {
+    source ~/.tmux.git.conf
+} {
+    set-option -g status on
+    set-option -g status-interval 1
+    set-window-option -g window-status-current-format ""
+    #if .git dont exist
+    set-option -g status-right-length 150
+    set-option -g status-right-style default
+    set-option -g status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
+}
+    
 
 
