--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -1,9 +1,23 @@
+#reload source file with key 'r'
+bind-key r source-file ~/.tmux.conf \; display-message reloaded
+
 set -g mouse on
 # Splitting terminals using | and -
-unbind a
-unbind ';'
-bind a split-window -h
-bind ';' split-window -v
+bind -n C-n split-window -h
+# bind -n C-m split-window -v
+
+# Moving windows using ctrl(fghj)
+bind -n C-k select-pane -U
+bind -n C-j select-pane -L
+
+# Resizing windows using arrow
+
+bind -n C-Up resize-pane -U 20
+bind -n C-Down resize-pane -D 20
+bind -n C-Left resize-pane -L 20
+bind -n C-Right resize-pane -R 20
+
+
 bind C-l clear-history
 set -g default-terminal "screen-256color"
 
@@ -12,10 +26,9 @@ set-option -g status on
 set-option -g status-left-length 150
 set-option -g status-left-style default
 
-#change congif file custom if .git exists
 if-shell "ls .git" {
     source ~/.tmux.git.conf
-} {
+} {    
     set-option -g status on
     set-option -g status-interval 1
     set-window-option -g window-status-current-format ""
@@ -24,6 +37,3 @@ if-shell "ls .git" {
     set-option -g status-right-style default
     set-option -g status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
 }
-    
-
-
