--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory/inventory
-private_key_file = ~/ssh-keys/ansible
+private_key_file = ~/.ssh/ansible
 host_key_checking = False
 
 # beome unpriv user
