--- a/ansible/dockerfile
+++ b/ansible/dockerfile
@@ -4,13 +4,10 @@ WORKDIR /home/ansible/
 RUN usermod -s '/bin/bash' root
 RUN apt update && apt install -y python3 ansible openssh-client
 RUN mkdir /root/.ssh
-
-RUN echo "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile=/dev/null" > /root/.ssh/config
 COPY  ["./ansible/","."]
 
 COPY ./setup.sh .
 RUN cat alias.sh >> ~/.bashrc
 RUN chmod +x setup.sh
 ENTRYPOINT [ "sh","setup.sh" ]
-# CMD [ "ansible","all","--key-file","ssh-keys/ansible","-m","ping"]
-CMD [ "ssh-copy-id","-i","ssh-keys/ansible","$SERVER_USER@$SERVER_NAME","<<<" ,"$SSH_KEY_PASSPHRASE" ]
+CMD [ "ansible","all","--key-file",".ssh/ansible","-m","ping"]
