--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,6 @@
 version: '3.4'
 services:
     ansible:
-        environment:
-            SERVER_HOST: ${SERVER_HOST}
-            SERVER_USER: ${SERVER_USER}
-            SERVER_NAME: ${SERVER_NAME}
-            GIT_NAME: ${GIT_NAME}
-            GIT_EMAIL: ${GIT_EMAIL}
         image: custom-ansible
         build: 
             context: .
@@ -16,9 +10,9 @@ services:
             - "./ansible/files/:/home/ansible/files/"
             - "./ansible/outputs:/home/ansible/outputs"
             - "./vars/:/home/ansible/vars/"
-            - "./ansible/ssh-keys/:/home/ansible/ssh-keys/"
+            - "./ansible/.ssh/:/home/ansible/.ssh/"
             - "./setup.sh:/home/ansible/setup.sh"
             - inventory:/home/ansible/inventory
-        command: ssh-copy-id -i ssh-keys/ansible -f ${SERVER_USER}@${SERVER_HOST}
+            - ./ansible/host.csv:/home/ansible/host.csv
 volumes:
     inventory:
