feat: terraform & packer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,32 @@ services:
             - "./ansible/playbooks:/home/ansible/playbooks"
             - "./ansible/files/:/home/ansible/files/"
             - "./ansible/outputs:/home/ansible/outputs"
-            - "./vars/:/home/ansible/vars/"
+            - "./ansible/vars/:/home/ansible/vars/"
             - "./ansible/.ssh/:/home/ansible/.ssh/"
             - "./setup.sh:/home/ansible/setup.sh"
             - inventory:/home/ansible/inventory
             - ./ansible/host.csv:/home/ansible/host.csv
+    terraform:
+        image: hashicorp/terraform
+        environment:
+        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+        user: root
+        volumes:
+        - ./files:/root/files
+        - ./terraform:/root/terraform
+        working_dir: /root/terraform/
+        entrypoint: ["/bin/sh"]
+    packer:
+        image: hashicorp/packer
+        environment:
+        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+        user: root
+        volumes:
+        - ./files:/root/files
+        - ./packer:/root/packer
+        working_dir: /root/packer/
+        entrypoint: ["/bin/sh"]
 volumes:
     inventory:
