--- a/ansible/dockerfile
+++ b/ansible/dockerfile
@@ -1,12 +1,10 @@
 FROM ubuntu:20.04
 USER root
-WORKDIR /home/ansible/
+WORKDIR /root/ansible
 RUN usermod -s '/bin/bash' root
 RUN apt update && apt install -y python3 ansible openssh-client
-RUN mkdir /root/.ssh
 COPY  ["./ansible/","."]
 
-COPY ./setup.sh .
 RUN cat alias.sh >> ~/.bashrc
 RUN chmod +x setup.sh
 ENTRYPOINT [ "sh","setup.sh" ]
