feat: include_tasks

--- a/ansible/files/.tmux.git.conf
+++ b/ansible/files/.tmux.git.conf
@@ -1,5 +1,5 @@
 #get colors in https://michurin.github.io/xterm256-color-picker/
-set-option -g status-style bg=default
+set-option -g status-style bg=default,fg=default
 
 #GIT
 GIT_BRANCH='#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
