--- a/ansible/dockerfile
+++ b/ansible/dockerfile
@@ -3,6 +3,7 @@ USER root
 WORKDIR /root/ansible
 RUN usermod -s '/bin/bash' root
 RUN apt update && apt install -y python3 ansible openssh-client
+COPY ./home/.profile "/root/"
 COPY  ["./ansible/","."]
 RUN chmod +x setup.sh
 ENTRYPOINT [ "sh","setup.sh" ]
