--- a/ansible/playbooks/withoutPass/testInclude.yml
+++ b/ansible/playbooks/withoutPass/testInclude.yml
@@ -10,7 +10,7 @@
     tags: debug
   - name: include all others tasks
     include_tasks:
-      file: test.yml
+      file: "tasks/test.yml"
       apply:
         tags:
           - debug
