--- a/ansible/playbooks/becomePass/nginx.yml
+++ b/ansible/playbooks/becomePass/nginx.yml
@@ -1,7 +1,7 @@
 # Desciption of the Ansible playbook
 ---
 - name: install tools
-  hosts: cloud_vm
+  host: all
   become: true # true to become root
 
   tasks:
