--- a/ansible/dockerfile
+++ b/ansible/dockerfile
@@ -5,6 +5,7 @@ RUN usermod -s '/bin/bash' root
 RUN apt update && apt install -y python3 ansible openssh-client
 COPY ./home/.profile "/root/"
 COPY  ["./ansible/","."]
+RUN chmod +x ansible-test.sh
 RUN chmod +x setup.sh
 ENTRYPOINT [ "sh","setup.sh" ]
 CMD [ "ansible","all","--key-file",".ssh/ansible","-m","ping"]
