--- a/ansible/playbooks/becomePass/interface.yml
+++ b/ansible/playbooks/becomePass/interface.yml
@@ -1,7 +1,7 @@
 # Desciption of the Ansible playbook
 ---
 - name: install tools
-  host: all
+  hosts: all
   become: true
 # true to become root
 
