--- a/ansible/playbooks/becomePass/k8-nodes.yml
+++ b/ansible/playbooks/becomePass/k8-nodes.yml
@@ -1,7 +1,7 @@
 # Desciption of the Ansible playbook
 ---
 - name: install kubeadmin
-  hosts: all
+  hosts: nodes
   become: true # true to become root
 
   tasks:
