--- a/ansible/playbooks/withoutPass/configSystem.yml
+++ b/ansible/playbooks/withoutPass/configSystem.yml
@@ -1,7 +1,7 @@
 # Desciption of the Ansible playbook
 ---
 - name: install tools
-  host: all
+  hosts: all
   become: false
 # true to become root
 
