--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ variables:
 init:
   stage: init
   script:
-    - terraform init \
+    - echo "$GITLAB_AUTO_TFVARS" > terraform/gitlab.auto.tfvars
+    - docker-compose run --rm  --entrypoint terraform terraform init \
       -backend-config=address=${TF_ADDRESS} \
       -backend-config=lock_address=${TF_ADDRESS}/lock \
       -backend-config=unlock_address=${TF_ADDRESS}/lock \
@@ -25,8 +26,7 @@ init:
       -backend-config=lock_method=POST \
       -backend-config=unlock_method=DELETE \
       -backend-config=retry_wait_min=5
-    - echo "$GITLAB_AUTO_TFVARS" > terraform/gitlab.auto.tfvars
-    - docker-compose run --rm  --entrypoint terraform terraform init -migrate-state -force-copy
+    # - docker-compose run --rm  --entrypoint terraform terraform init -migrate-state -force-copy
 
 validate:
   stage: validate
