--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,15 @@ init:
   stage: init
   script:
     - echo "$GITLAB_AUTO_TFVARS" > terraform/gitlab.auto.tfvars
-    - docker-compose run --rm --entrypoint terraform terraform init
+    - docker-compose run --rm --entrypoint terraform terraform init \
+      -backend-config="address=https://gitlab.com/api/v4/projects/42073065/terraform/state/old-state-name" \
+      -backend-config="lock_address=https://gitlab.com/api/v4/projects/42073065/terraform/state/old-state-name/lock" \
+      -backend-config="unlock_address=https://gitlab.com/api/v4/projects/42073065/terraform/state/old-state-name/lock" \
+      -backend-config="username=Al3xDiaz" \
+      -backend-config="password=$GITLAB_ACCESS_TOKEN" \
+      -backend-config="lock_method=POST" \
+      -backend-config="unlock_method=DELETE" \
+      -backend-config="retry_wait_min=5"
 
 validate:
   stage: validate
