--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     environment:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+
+      GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
     user: root
     volumes:
       - ./home/:/root/
