--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,9 +25,9 @@ init:
      - home/
 
   script:
-    - echo "example_remote_state_address=\"$example_remote_state_address\"" >> terraform/gitlab.auto.tfvars
-    - echo "example_username=\"$example_username\"" >> terraform/gitlab.auto.tfvars
-    - echo "example_access_token=\"$EXAMPLE_ACCESS_TOKEN\"" >> terraform/gitlab.auto.tfvars
+    # - echo "example_remote_state_address=\"$example_remote_state_address\"" >> terraform/gitlab.auto.tfvars
+    # - echo "example_username=\"$example_username\"" >> terraform/gitlab.auto.tfvars
+    # - echo "example_access_token=\"$EXAMPLE_ACCESS_TOKEN\"" >> terraform/gitlab.auto.tfvars
     - docker-compose run --rm --entrypoint /root/terraform/terraform-init.sh terraform
 
 validate:
