[fix] cicd try 17

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,10 +27,7 @@ init:
      - home/
 
   script:
-    # - echo "example_remote_state_address=\"$example_remote_state_address\"" >> terraform/gitlab.auto.tfvars
-    # - echo "example_username=\"$example_username\"" >> terraform/gitlab.auto.tfvars
-    # - echo "example_access_token=\"$EXAMPLE_ACCESS_TOKEN\"" >> terraform/gitlab.auto.tfvars
-    - docker-compose run --rm --entrypoint /root/terraform/terraform-init.sh terraform
+    - docker-compose run --rm --entrypoint terraform terraform init -migrate-state -force-copy
 
 validate:
   stage: validate
