--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,7 @@ services:
   - docker:20.10.16-dind
 
 stages:
-  - init
-  - validate
+  - init-validate
   - plan
   - apply
 
@@ -19,11 +18,11 @@ variables:
   example_access_token: $EXAMPLE_ACCESS_TOKEN
 
 init:
-  stage: init
+  stage: init-validate
   cache:
-    key: build-cache
+    key: build_cache
     paths:
-     - terraform/
+     - terraform/.terraform
      - home/
 
   script:
@@ -31,22 +30,12 @@ init:
     - echo "example_username=\"$example_username\"" >> terraform/gitlab.auto.tfvars
     - echo "example_access_token=\"$EXAMPLE_ACCESS_TOKEN\"" >> terraform/gitlab.auto.tfvars
     - docker-compose run --rm --entrypoint terraform terraform init -migrate-state -force-copy
-
-validate:
-  stage: validate
-  cache:
-    key: build-cache
-    paths:
-     - terraform/
-     - home/
-
-  script:
     - docker-compose run --rm  --entrypoint terraform terraform validate
 
 plan:
   stage: plan
   cache:
-    key: build-cache
+    key: build_cache
     paths:
      - terraform/
      - home/
@@ -59,7 +48,7 @@ plan:
 apply:
   stage: apply
   cache:
-    key: build-cache
+    key: build_cache
     paths:
      - terraform/
      - home/
