--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,13 +23,17 @@ init:
     key: build_cache
     paths:
      - terraform/.terraform
+     - terraform/.terraform.lock.hcl
+     - terraform/.terraform.tfstate
+     - terraform/.terraform.tfstate.backup
+     - terraform/gitlab.auto.tfvars
      - home/
 
   script:
     - echo "example_remote_state_address=\"$example_remote_state_address\"" > terraform/gitlab.auto.tfvars
     - echo "example_username=\"$example_username\"" >> terraform/gitlab.auto.tfvars
     - echo "example_access_token=\"$EXAMPLE_ACCESS_TOKEN\"" >> terraform/gitlab.auto.tfvars
-    - docker-compose run --rm --entrypoint terraform terraform init -migrate-state -force-copy
+    - docker-compose run --rm --entrypoint /root/terraform/terraform-init.sh terraform
     - docker-compose run --rm  --entrypoint terraform terraform validate
 
 plan:
@@ -37,7 +41,11 @@ plan:
   cache:
     key: build_cache
     paths:
-     - terraform/
+     - terraform/.terraform
+     - terraform/.terraform.lock.hcl
+     - terraform/.terraform.tfstate
+     - terraform/.terraform.tfstate.backup
+     - terraform/gitlab.auto.tfvars
      - home/
 
   script:
@@ -50,7 +58,11 @@ apply:
   cache:
     key: build_cache
     paths:
-     - terraform/
+     - terraform/.terraform
+     - terraform/.terraform.lock.hcl
+     - terraform/.terraform.tfstate
+     - terraform/.terraform.tfstate.backup
+     - terraform/gitlab.auto.tfvars
      - home/
 
   script:
