--- a/terraform/modules/ec2/nginx/nginx.conf
+++ b/terraform/modules/ec2/nginx/nginx.conf
@@ -2,11 +2,14 @@ server {
 	listen 80;
 
 	root /var/www/html;
-	index index.html index.htm index.nginx-debian.html;
-
 	server_name cms.chaoticteam.com;
 
 	location / {
 		proxy_pass http://0.0.0.0:8080/;
+		proxy_set_header   Host $host;
+		proxy_set_header   X-Real-IP  $remote_addr;
+		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Forwarded-Proto https;
+		proxy_set_header   X-Forwarded-Host $host;
 	}
 }
