--- a/terraform/modules/ec2/wordpress/docker-compose.yml
+++ b/terraform/modules/ec2/wordpress/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   wordpress:
     image: wordpress
     ports:
-      - 8080:80
+      - ${WORDPRESS_SERVICE_PORT}:80
     environment:
       WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST}
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
